# Loss

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  prerelease.yml  release.yml  release_old-glibc.yml
docs/: changelog
src/: bookmark.rs  canvas.rs  chunk.rs  document.rs  event_hub.rs  event_source.rs  finder.rs  helper.rs  log_timestamp.rs  main.rs  manager.rs  prompt.rs  render.rs  status_bar.rs  window.rs
