[package]
name = "loss-viewer"  # why crate.io doesn't have package namespace !!
version = "0.2.0"
description = "A modern terminal pager and log viewer."
authors = ["Gusabary <Gusabary@126.com>"]
keywords = ["cli", "terminal-pager", "log-viewer"]
documentation = "https://github.com/Gusabary/Loss/blob/master/README.md"
homepage = "https://github.com/Gusabary/Loss"
repository = "https://github.com/Gusabary/Loss"
readme = "README.md"
license = "MIT"
edition = "2021"

[[bin]]
name = "loss"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
crossterm = "0.28"
anyhow = "1.0"
log = "0.4"
fern = "0.6"
regex = "1.11"
